@@ -785,10 +785,46 @@ operator|.
 name|blockmanagement
 operator|.
 name|DatanodeDescriptor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
+name|blockmanagement
+operator|.
+name|DatanodeDescriptor
 operator|.
 name|CachedBlocksList
 operator|.
 name|Type
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
+name|blockmanagement
+operator|.
+name|DatanodeManager
 import|;
 end_import
 
@@ -9176,6 +9212,72 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * Check that the NameNode is not attempting to cache anything.    */
+DECL|method|checkPendingCachedEmpty (MiniDFSCluster cluster)
+specifier|private
+name|void
+name|checkPendingCachedEmpty
+parameter_list|(
+name|MiniDFSCluster
+name|cluster
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|DatanodeManager
+name|datanodeManager
+init|=
+name|cluster
+operator|.
+name|getNamesystem
+argument_list|()
+operator|.
+name|getBlockManager
+argument_list|()
+operator|.
+name|getDatanodeManager
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|DataNode
+name|dn
+range|:
+name|cluster
+operator|.
+name|getDataNodes
+argument_list|()
+control|)
+block|{
+name|DatanodeDescriptor
+name|descriptor
+init|=
+name|datanodeManager
+operator|.
+name|getDatanode
+argument_list|(
+name|dn
+operator|.
+name|getDatanodeId
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|descriptor
+operator|.
+name|getPendingCached
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 annotation|@
 name|Test
 argument_list|(
@@ -9328,28 +9430,21 @@ argument_list|,
 literal|"testExceeds:1"
 argument_list|)
 expr_stmt|;
-comment|// Check that no DNs saw an excess CACHE message
-name|int
-name|lines
-init|=
-name|appender
-operator|.
-name|countLinesWithMessage
+name|checkPendingCachedEmpty
 argument_list|(
-literal|"more bytes in the cache: "
-operator|+
-name|DFSConfigKeys
-operator|.
-name|DFS_DATANODE_MAX_LOCKED_MEMORY_KEY
+name|cluster
 argument_list|)
-decl_stmt|;
-name|assertEquals
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
 argument_list|(
-literal|"Namenode should not send extra CACHE commands"
-argument_list|,
-literal|0
-argument_list|,
-name|lines
+literal|1000
+argument_list|)
+expr_stmt|;
+name|checkPendingCachedEmpty
+argument_list|(
+name|cluster
 argument_list|)
 expr_stmt|;
 comment|// Try creating a file with giant-sized blocks that exceed cache capacity
@@ -9386,35 +9481,21 @@ argument_list|,
 literal|0xFADED
 argument_list|)
 expr_stmt|;
-comment|// Nothing will get cached, so just force sleep for a bit
+name|checkPendingCachedEmpty
+argument_list|(
+name|cluster
+argument_list|)
+expr_stmt|;
 name|Thread
 operator|.
 name|sleep
 argument_list|(
-literal|4000
+literal|1000
 argument_list|)
 expr_stmt|;
-comment|// Still should not see any excess commands
-name|lines
-operator|=
-name|appender
-operator|.
-name|countLinesWithMessage
+name|checkPendingCachedEmpty
 argument_list|(
-literal|"more bytes in the cache: "
-operator|+
-name|DFSConfigKeys
-operator|.
-name|DFS_DATANODE_MAX_LOCKED_MEMORY_KEY
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|"Namenode should not send extra CACHE commands"
-argument_list|,
-literal|0
-argument_list|,
-name|lines
+name|cluster
 argument_list|)
 expr_stmt|;
 block|}
